[gd_scene load_steps=7 format=3 uid="uid://uwyrqkwgxklq"]

[ext_resource type="Script" path="res://assets/scripts/coding_blocks/visuals/display_visual.gd" id="1_pntbi"]
[ext_resource type="Texture2D" uid="uid://c85awh36wvmys" path="res://assets/textures/coding_blocks_textures/visual/display_value.png" id="2_pqldv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apvcg"]
size = Vector2(128, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rx1xd"]
load_path = "res://.godot/imported/base.png-32e5d26157ec0f8af9a7c67f2cc750de.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o11e6"]
size = Vector2(12, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf813"]
size = Vector2(12, 4)

[node name="display_visual" type="Area2D" groups=["block"]]
collision_mask = 0
monitoring = false
script = ExtResource("1_pntbi")

[node name="display_visual_shape" type="CollisionShape2D" parent="."]
position = Vector2(64, 16)
shape = SubResource("RectangleShape2D_apvcg")

[node name="display_visual_texture" type="NinePatchRect" parent="."]
offset_right = 64.0
offset_bottom = 16.0
scale = Vector2(2, 2)
texture = SubResource("CompressedTexture2D_rx1xd")
region_rect = Rect2(0, 0, 64, 16)
patch_margin_left = 11
patch_margin_top = 4
patch_margin_right = 11
patch_margin_bottom = 4

[node name="display" type="TextureRect" parent="display_visual_texture"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -4.0
offset_right = 25.0
offset_bottom = 3.0
texture = ExtResource("2_pqldv")
expand_mode = 1
stretch_mode = 5

[node name="head" type="Area2D" parent="." groups=["head"]]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="head_shape" type="CollisionShape2D" parent="head"]
position = Vector2(14, 2)
shape = SubResource("RectangleShape2D_o11e6")

[node name="tail" type="Area2D" parent="." groups=["tail"]]
position = Vector2(0, 28)
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="tail_shape" type="CollisionShape2D" parent="tail"]
position = Vector2(14, 2)
shape = SubResource("RectangleShape2D_gf813")

[node name="display_value" type="Node2D" parent="."]
position = Vector2(58, 0)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="head" to="." method="_on_head_area_entered"]
[connection signal="area_exited" from="head" to="." method="_on_head_area_exited"]
[connection signal="area_entered" from="tail" to="." method="_on_tail_area_entered"]
[connection signal="area_exited" from="tail" to="." method="_on_tail_area_exited"]
